# pfs_utils

./: .gitignore  README.md  SConstruct  pyproject.toml  setup.py
bin.src/: makeDummyCableBDesign.py
data/fiberids/: README.txt  fiducials.20171111.txt  fiducials.asrd+20deg.txt  grandfibermap.20171114.txt  grandfibermap.20210214.txt  grandfibermap.20210314.txt  grandfibermap.txt
docs/: Makefile  butlerNotes.rst  conf.py  imageFiles.rst  index.rst
notebooks/: PFI Geometry.ipynb  PIPE2D-556 (Visualize dummy cable B fibers).ipynb  pfsDesign-rhl.ipynb  versions.ipynb
notebooks/kiyoyabe/: black_dots_mm_el30_rot+00_kiyoyabe_20210926.csv  black_dots_mm_el45_rot+00_kiyoyabe_20210926.csv  black_dots_mm_el60_rot+00_kiyoyabe_20210926.csv  black_dots_mm_el75_rot+00_kiyoyabe_20210926.csv  black_dots_mm_el90_rot+00_kiyoyabe_20210926.csv  black_dots_mm_kiyoyabe.csv  dot_pos_final.txt  fieldElementLocation_yabe_all_subaru_20210710.ipynb  fieldElementLocation_yabe_subaru_on_telescope_20210926.ipynb  getDotPositionOnPfiCoordinate_yabe_subaru_20210710.ipynb
python/pfs/utils/: BlackDotsScript.py  __init__.py  blackDotsScript.py  butler.py  butlerMaps.py  cobraMaskFile.py  constants.py  display.py  dummyCableB.py  fiberids.py  fibers.py  fibpacking.py  headerFixes.py  ingestCobraGeometry.py  ingestPfsDesign.py  instdata.py  location.py  makePfsDesign.py  ncaplar.py  oneCobra.py  opdb.py  optimizeBlackDots.py  optimize_black_dots.py  pfsConfigUtils.py  pfsDesignUtils.py  pfsDesignVariants.py  spectroIds.py  spsLogbook.py  versions.py
python/pfs/utils/coordinates/: CoordTransp.py  DistortionCoefficients.py  MakeWCSCards.py  Subaru_POPT2_PFS.py  coordinates.py  transform.py  updateTargetPosition.py
python/pfs/utils/coordinates/data/: Refraction_data_635nm.txt
python/pfs/utils/database/: db.py  gaia.py  opdb.py  qadb.py
python/pfs/utils/datamodel/: ag.py
python/pfs/utils/obsproc/: obsCondition.py  opDB.py  qaDB.py
python/pfs/utils/sps/: config.py  fits.py  logbook.py  parts.py  spsConfig.py
tests/: test_db.py  test_fiberIds.py  test_transform.py
ups/: eupspkg.cfg.sh  pfs_utils.table
